# Android-Native-Check-Obesity

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/basic/orbianta/fun/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  i-love-cockatiels.cpp
app/src/main/java/basic/orbianta/fun/: MainActivity.java  global.java  splash.java
app/src/main/res/drawable/: cool_background.xml  custom_button.xml  splash_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/basic/orbianta/fun/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
